# todo

./: .gitignore  Dockerfile  Makefile  README.md  auth.py  crud.py  db.py  docker-compose.dev.yml  emailer.py  main.py  models.py  pyproject.toml  pytest.ini  requirements-ci.txt  routes.py  schemas.py
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0553e88c3764_initial.py  20250922_add_todos_created_at_id_index.py  20250922_set_timestamps_server_defaults.py  20250923_merge_heads.py  20250924_add_email_verification.py  ae7f1b2c9d4f_create_refresh_tokens.py  ba9d4f1e8c2b_add_fks_to_todos_and_refresh_tokens.py  c562493547f9_my_first_revision.py  cd3f7b8a9f1c_make_todos_owner_cascade.py  df3a1b2e9add_add_device_type_to_refresh_tokens.py  ea1b3c4d5f67_fk_replaced_by_expires_idx_device_check.py  f1a2b3c4d5e6_add_todo_completed_fields.py
scripts/: create_admin.py
tests/: conftest.py  test_auth_flow.py  test_email_verification.py  test_registration_scopes.py  test_schemas.py
